zoom issue on mobile fixed

--- a/src/Styles/contact.scss
+++ b/src/Styles/contact.scss
@@ -1,4 +1,8 @@
 .form {
+  // border: 2px solid;
+  max-width: 920px;
+  width: 100%;
+  min-height: 565.41px;
   h2 {
     color: #f1f1f1;
     font-size: 30px;
